3C - Notas/Horarios/Objetivos

--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -78,7 +78,11 @@
         min-width: 60%;
     }
 }
-
+@media (max-height: 480px) {
+    .navbar {
+        right: -200vh;
+    }
+}
 
 .nav_active {
     opacity: 1;
