--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,19 @@
     margin: 0;
 }
 
+:root {
+    --primary-color: #00A9FF;
+    --secundary-color: #207ad8;
+
+
+    --background-dark: #141607;
+
+
+
+    --background-color: #17429f;
+    --neutral-mutted-color: rgba(54, 53, 80, 0.4);
+}
+
 html,
 body {
     max-width: 100vw;
@@ -11,11 +24,18 @@ body {
 }
 
 body {
-    background-image: url('/images/background.webp');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    background-attachment: fixed;
+    /* background-color: #141607; */
+
+    background: radial-gradient(circle, var(--background-color) 0%, rgba(0, 0, 0, 1) 100%);
+
+    /* background: radial-gradient(circle,  rgba(0,61,255,1) 0%, rgba(0,0,0,1) 100%); */
+    /* background: radial-gradient(circle, rgba(0,0,0,1) 0%, rgba(0,61,255,1) 50%, rgba(0,0,0,1) 100%); */
+
+    /* background: radial-gradient(circle,  rgb(251, 255, 0) 0%, rgba(0,0,0,1) 100%); */
+
+    /* background-color: #ffffb4; MISMO QUE OTRO PROYECTO*/
+
+    /* background-color: #000000; */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -34,32 +54,19 @@ li {
     list-style: none;
 }
 
-header {
-    position: fixed;
-    justify-content: space-between;
-    height: 3rem;
-    width: 100%;
-    z-index: 100;
-}
-
-main {
-    margin-top: 3rem;
-    min-height: 83vh;
-}
-
 footer {
-    height: 4.5rem;
-    padding: 5px;
-    gap: 8px;
+    margin-top: auto;
+    height: 5rem;
+    font-size: 1.2em;
 }
 
-footer small:hover {
-    color: yellow;
+footer a:hover {
+    color: var(--primary-color);
 }
 
 .bg-d {
     color: white;
-    background-color: #000000d9
+    background-color: var(--background-dark);
 }
 
 .bg-w {
@@ -72,39 +79,9 @@ footer small:hover {
     align-items: center;
 }
 
-.contain {
-    min-height: 50vh;
-    width: 80%;
-    margin: 1rem auto;
-    padding: 1rem 0
-}
-
 .f-column-center {
     flex-direction: column;
     justify-content: center;
-}
-
-.header {
-    width: 100%;
-    justify-content: space-evenly;
-    padding: 0 1rem;
-}
-
-.title-contain {
-    margin: 1rem auto;
-    width: fit-content;
-    padding: 0.5rem 1.5rem;
-    background-color: black;
-    color: white;
-    border-radius: 25px;
-    text-align: center;
-    border: solid 1px white;
-    box-shadow: 0 0 12px 2px black;
-}
-
-.title-contain h1 {
-    font-size: 3rem;
-    font-weight: 700;
 }
 
 .btn {
@@ -116,36 +93,35 @@ footer small:hover {
 }
 
 .icon-bg-b {
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.5);
     color: white;
 }
 
+.icon-bg-b:hover {
+    background-color: black;
+}
+
 .icon-bg-w {
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.5);
     color: black;
+}
+
+.icon-bg-w:hover {
+    background-color: white;
 }
 
 .btn-icon {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 55px;
-    height: 55px;
+    width: 70px;
+    height: 70px;
     border-radius: 100%;
-    font-size: 2em;
+    font-size: 2.5em;
     border: solid 2px;
     cursor: pointer;
+    transition: all .5s;
 }
-
-
-
-
-@media (max-width: 400px) {
-    /* .contain {
-        width: max-content;
-    } */
-}
-
 
 *::-webkit-scrollbar {
     width: 5px;
@@ -154,13 +130,11 @@ footer small:hover {
 }
 
 *::-webkit-scrollbar-track {
-    background: #000000d9;
+    background: var(--background-dark);
 }
 
-
 *::-webkit-scrollbar-thumb {
-    background-color: yellow;
-
+    background-color: var(--secundary-color);
     border-radius: 5px;
 }
 
@@ -176,6 +150,7 @@ textarea::-webkit-scrollbar-thumb,
 p::-webkit-scrollbar-thumb {
     background-color: #5c5757
 }
+
 textarea::-webkit-scrollbar,
 p::-webkit-scrollbar {
     width: 3px;
