--- a/styles/components/Navbar.module.css
+++ b/styles/components/Navbar.module.css
@@ -4,20 +4,15 @@
 
 .navbar_contain {
     justify-content: space-between;
-    padding: 0 2rem;
-    height: 3.5rem;
+    padding: 0 1.8rem;
+    height: 4rem;
     width: 100%;
     margin: 0 auto;
     z-index: 4;
 }
 
-.navbar_contain a {
-    font-size: 2.5em;
-    padding: 5px 1rem;
-}
-
-.navbar_contain a:active {
-    color: var(--background-color);
+.name_page {
+    font-size: 2em;
 }
 
 .backdrop {
@@ -33,8 +28,6 @@
 .nav_btn {
     z-index: 4;
 }
-
-
 
 .nav_btn:hover,
 .name_page:hover {
@@ -58,8 +51,7 @@
     flex-direction: column;
     align-items: flex-start;
     padding-top: 4.5rem;
-    padding-left:4rem;
-    gap: 7px;
+    padding-left: 2rem;
     width: 100%;
     height: 100%;
     background-color: var(--background-dark);
@@ -68,10 +60,18 @@
     background-repeat: no-repeat;
 }
 
-.nav_items .nav_links {
-    min-height: 3.5rem;
-    display: flex;
-    align-items: center;
+.nav_links {
+    min-height: 4rem;
+    line-height: 4rem;
+}
+
+.nav_items a {
+    font-size: 2.8em;
+    padding: 0 1.5rem;
+}
+.name_page a:active,
+.navbar_contain a:active {
+    color: var(--background-color);
 }
 
 .nav_links:hover,
@@ -95,9 +95,9 @@
     }
 }
 
-@media (max-width: 375px),
+@media (max-width: 480px),
 (max-height: 480px) {
-    .navbar_contain a {
-        font-size: 1.5em;
+    .nav_items a {
+        font-size: 2em;
     }
 }
