--- a/styles/components/Search.module.css
+++ b/styles/components/Search.module.css
@@ -1,79 +1,43 @@
 .form {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    color: white;
-    width: 90%;
+    width: 85%;
     margin: 0 auto 1rem;
-    border-radius: 8px;
-    height: 3.2rem;
+    height: 3.5rem;
     font-family: '__Roboto_Mono_c41b7d', '__Roboto_Mono_Fallback_c41b7d';
 }
 
-.inputText {
-    background-color: transparent;
-    color: inherit;
-    outline-style: none;
-    border: none;
-    border-radius: 8px 0 0 8px;
-    width: 85%;
-    height: 100%;
-    padding: 0 1rem;
-    font-weight: 500;
+.form input {
+    color: #fff;
     font-size: 1.5rem;
-    background-color: rgba(34, 9, 44, 0.95);
-    transition: ease .4s;
+    height: 100%;
+    font-weight: 500;
+}
+
+.inputText {
+    width: calc(100% - 120px);
+    padding: 0 1rem;
+    background-color: var(--background-dark);
+    border-radius: 8px 0 0 8px;
 }
 
 .inputText:disabled {
     text-align: end;
-    background-color: rgba(135, 35, 65, 0.95);
+    background-color: rgba(135, 35, 65, 0.8);
 }
 
 
 .input {
-    width: 15%;
-    height: 100%;
-    text-wrap: nowrap;
-    border-radius: 0 8px 8px 0;
-    border: none;
-    text-align: center;
+    width: 120px;
     cursor: pointer;
-    font-size: 1.3em;
-    color: inherit;
-    transition: ease .4s;
-}
-
-.search {
-    background-color: rgba(89, 25, 114, 0.95);
+    border-radius: 0 8px 8px 0;
+    background-color: var(--background-color);
 }
 
 .delete {
-    background-color: rgba(190, 49, 68, 0.95)
-}
-
-@media (max-width: 780px) {
-    .inputText {
-        width: 80%;
-    }
-
-    .input {
-        width: 20%;
-    }
+    background-color: rgba(190, 49, 68, 0.8)
 }
 
 @media (max-width: 480px) {
     .form {
-        width: 99%;
-    }
-
-    .inputText {
-        width: 75%;
-    }
-
-    .input {
-        width: 25%;
-        font-size: 1.2em;
+        width: 96%;
     }
 }
