--- a/styles/Tasks.module.css
+++ b/styles/Tasks.module.css
@@ -1,6 +1,6 @@
 .tasks_list_container {
     justify-content: space-between;
-    margin: 2rem auto 4rem;
+    margin: 2rem auto;
     width: 80%;
     height: 555px;
     color: white;
@@ -105,7 +105,7 @@
 .task_text textarea {
     font-size: 1.7em;
     text-align: center;
-    height: 80px;
+    width: 100%;
 }
 
 .form {
