--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    scroll-behavior: smooth;
 }
 
 :root {
@@ -59,9 +60,9 @@ textarea{
     width: 100%;
     background-color: transparent;
     overflow-y: auto;
-
-
+    field-sizing: content;
 }
+
 input {
     outline-style: none;
     border: none;
