--- a/styles/Notes.module.css
+++ b/styles/Notes.module.css
@@ -118,8 +118,36 @@
     background-color: rgba(0, 0, 0, 0.63);
 }
 
+.sort_select_contain {
+    font-size: 1.4em;
+    background-color: var(--neutral-mutted-color);
+    color: #fff;
+    padding: .5rem 1rem;
+    justify-content: space-evenly;
+    text-align: center;
+}
+
+.sort_select_contain select {
+    width: 230px;
+    font-size: 1em;
+    padding: .6rem 1rem;
+    background-color: var(--background-color);
+    color: inherit;
+    border: none;
+    outline: none;
+    text-transform: uppercase;
+    text-align: center;
+}
+
 @media (max-width:537px) {
     .notes_container {
         justify-content: center;
+    }
+    .sort_select_contain {
+    flex-direction: column;
+    gap: .5rem;
+    }
+    .sort_select_contain select {
+    width: 80%;
     }
 }
