--- a/styles/components/Navbar.module.css
+++ b/styles/components/Navbar.module.css
@@ -25,6 +25,14 @@
     z-index: 4;
 }
 
+.nav_login{
+    font-size: 1.75em;
+    text-align: center;
+    background-color: var(--secondary-color);
+    border-radius: 14px;
+    padding: .3rem .65rem;
+}
+
 .nav_btn {
     z-index: 4;
 }
@@ -77,7 +85,7 @@
 
 .nav_links:hover,
 .clicked {
-    color: var(--secundary-color);
+    color: var(--secondary-color);
 }
 
 .nav_active {
