--- a/styles/components/Title.module.css
+++ b/styles/components/Title.module.css
@@ -26,8 +26,8 @@
     padding: 0 5px;
 }
 .title_contain a:hover{
-    color:  var(--secundary-color);
-    border-bottom: solid 1px var(--secundary-color);
+    color:  var(--secondary-color);
+    border-bottom: solid 1px var(--secondary-color);
 }
 
 .active{
