--- a/styles/Notes.module.css
+++ b/styles/Notes.module.css
@@ -125,6 +125,9 @@
     padding: .5rem 1rem;
     justify-content: space-evenly;
     text-align: center;
+    margin: auto;
+    width: 85%;
+    border-radius: 12px;
 }
 
 .sort_select_contain select {
@@ -137,17 +140,34 @@
     outline: none;
     text-transform: uppercase;
     text-align: center;
+    border-radius: 8px;
+
+    /* Oculta la flecha predeterminada */
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background-image: url('/images/double_arrow_down.svg');
+    background-position: right center;
+    background-repeat: no-repeat;
+}
+
+.sort_select_contain select option {
+    background-color: var(--background-dark);
+    color: #fff;
 }
 
 @media (max-width:537px) {
     .notes_container {
         justify-content: center;
     }
+
     .sort_select_contain {
-    flex-direction: column;
-    gap: .5rem;
+        flex-direction: column;
+        gap: .5rem;
+        width: 90%;
     }
+
     .sort_select_contain select {
-    width: 80%;
+        width: 80%;
     }
 }
