--- a/styles/globals.css
+++ b/styles/globals.css
@@ -48,11 +48,11 @@ a {
     text-decoration: none;
 }
 
-li {
+nav li {
     list-style: none;
 }
 
-textarea{
+textarea {
     resize: none;
     border: none;
     outline-style: none;
@@ -71,13 +71,31 @@ input {
 
 footer {
     margin-top: auto;
-    height: 5rem;
+    height: 110px;
     font-size: 1.2em;
+    gap: .3rem;
 }
 
-footer a:hover {
+footer span a:hover {
     color: var(--primary-color);
 }
+
+footer div {
+    gap: .5rem;
+}
+
+footer svg {
+    filter: grayscale(75%);
+    transition: filter, transform 0.3s ease;
+}
+
+footer svg:hover {
+    filter: grayscale(0%);
+    transform: scale(1.1);
+}
+
+
+
 
 .bg-d {
     color: white;
