--- a/styles/components/Message.module.css
+++ b/styles/components/Message.module.css
@@ -1,7 +1,7 @@
 .message_contain {
-    min-height: 50px;
+    min-height: 20px;
     width: 50%;
-    margin: 1rem auto 2rem;
+    margin: 1rem auto;
 }
 
 .message_contain div {
