--- a/styles/components/Navbar.module.css
+++ b/styles/components/Navbar.module.css
@@ -17,6 +17,7 @@
 
 .backdrop {
     background: var(--neutral-mutted-color);
+    backdrop-filter: blur(2.5px);
     position: fixed;
     width: 100%;
     height: 100%;
@@ -25,7 +26,7 @@
     z-index: 4;
 }
 
-.nav_login{
+.nav_login {
     font-size: 1.75em;
     text-align: center;
     background-color: var(--secondary-color);
@@ -38,7 +39,7 @@
 }
 
 .nav_btn:hover,
-.navbar_contain > a:hover {
+.navbar_contain>a:hover {
     color: var(--primary-color);
 }
 
@@ -74,10 +75,12 @@
     line-height: 3.8rem;
 }
 
-.login,.nav_items a {
+.login,
+.nav_items a {
     font-size: 2.8em;
     padding: 0 1.5rem;
 }
+
 .name_page a:active,
 .navbar_contain a:active {
     color: var(--background-color);
@@ -99,7 +102,7 @@
 
 @media (max-width: 780px) {
     .navbar {
-        width: 70%
+        width: 80%
     }
 }
 
