--- a/styles/components/Message.module.css
+++ b/styles/components/Message.module.css
@@ -2,6 +2,11 @@
     min-height: 20px;
     width: 50%;
     margin: 1rem auto;
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 7;
 }
 
 .message_contain div {
