--- a/styles/Tasks.module.css
+++ b/styles/Tasks.module.css
@@ -2,7 +2,7 @@
     justify-content: space-between;
     margin: 2rem auto;
     width: 80%;
-    height: 555px;
+    min-height: 555px;
     color: white;
     background-color: var(--neutral-mutted-color);
     padding: 10px 2px 2px;
@@ -11,7 +11,7 @@
 
 .list_container {
     flex-direction: column;
-    height: calc(100% - 65px);
+    height:500px;
     width: 100%;
     overflow-y: auto;
     gap: 11px;
@@ -112,7 +112,8 @@
 
 .form {
     width: 100%;
-    height: 55px;
+    margin-top: 7px;
+    min-height: 60px;
 }
 
 .form button {
@@ -123,15 +124,15 @@
     padding: 0 4px;
 }
 
-.form input {
+.form textarea {
     width: 100%;
-    height: 100%;
+    min-height: 55px;
     color: #fff;
-    font-size: 1.3em;
-    padding-left: 15px;
-    padding-right: 8px;
+    font-size: 1.6em;
+    padding: 6px 10px;
     background-color: var(--background-dark);
     border-radius: 10px;
+    align-content: center;
 }
 
 
