--- a/styles/components/Search.module.css
+++ b/styles/components/Search.module.css
@@ -1,6 +1,6 @@
 .form {
     width: 85%;
-    margin: 0 auto 1rem;
+    margin: 0 auto;
     height: 3.5rem;
     font-family: '__Roboto_Mono_c41b7d', '__Roboto_Mono_Fallback_c41b7d';
 }
