--- a/styles/components/Navbar.module.css
+++ b/styles/components/Navbar.module.css
@@ -63,7 +63,8 @@
 .nav_items {
     overflow-y: auto;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: flex-start !important;
+    gap: 10px;
     padding-top: 4.5rem;
     padding-left: 2rem;
     width: 100%;
@@ -75,15 +76,23 @@
     background-size: contain;
 }
 
-.nav_links {
-    min-height: 3.8rem;
-    line-height: 3.8rem;
+.nav_links,
+.title_sub_items {
+    min-height: 3rem;
+    line-height: 3rem;
 }
 
 .login,
-.nav_items a {
-    font-size: 2.8em;
+.nav_items a,
+.sub_items_contain ul a,
+.title_sub_items {
+    font-size: 2em;
     padding: 0 1.5rem;
+}
+
+.sub_items_contain ul a {
+    font-size: 1.85em;
+    padding: 0 1rem;
 }
 
 .name_page a:active,
@@ -91,9 +100,14 @@
     color: var(--background-color);
 }
 
+
 .nav_links:hover,
 .clicked {
     color: var(--secondary-color);
+}
+
+.logout_link:hover {
+    color: darkred
 }
 
 .nav_active {
@@ -103,6 +117,30 @@
 
 .active {
     color: var(--primary-color);
+}
+
+
+.sub_items_contain {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start !important;
+    width: 100%;
+    height: auto;
+    gap: 6px;
+}
+
+.sub_items_contain ul {
+    background-color: rgba(var(--background-color-rgb), 0.3);
+    border-radius: 8px;
+    margin-left: 2rem;
+    padding: 1rem 3rem;
+}
+
+.divider {
+    width: calc(100% - 2rem);
+    height: 1px;
+    border-radius: 12px;
+    background-color: rgba(var(--secondary-color-rgb), 0.5);
 }
 
 @media (max-width: 780px) {
@@ -117,7 +155,24 @@
         padding: 0 .5rem;
     }
 
-    .nav_items a {
-        font-size: 2em;
+    .sub_items_contain ul a,
+    .nav_items a,
+    .title_sub_items {
+        font-size: 1.8em;
+    }
+
+    .nav_items {
+        gap: 6px;
+        padding-top: 3.5rem;
+    }
+
+    .sub_items_contain ul {
+        padding: .5rem 1.5rem;
+    }
+
+    .nav_links,
+    .title_sub_items {
+        min-height: 2.65rem;
+        line-height: 2.65rem;
     }
 }
