--- a/styles/Schedules.module.css
+++ b/styles/Schedules.module.css
@@ -1,77 +1,71 @@
 .table_contain {
-    width: 99%;
-    margin: 2rem auto;
-    overflow-x: auto;
-    color: white;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+  width: 99%;
+  margin: 2rem auto;
+  overflow-x: auto;
+  color: white;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .table {
-    width: 97%;
-    border-collapse: collapse;
-    text-align: center;
-    background-color: rgba(0, 0, 0, 0.5);
-    margin: auto;
+  width: 97%;
+  border-collapse: collapse;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  margin: auto;
 }
-
-.table td {
-    font-weight: 500;
-}
-
 
 .table th,
 .table td {
-    border: solid 2px rgba(221, 221, 221, 0.5);
-    padding: 5px;
+  border: solid 2px rgba(221, 221, 221, 0.5);
+  padding: 5px;
 }
 
 .table tr {
-    height: fit-content;
+  height: fit-content;
 }
 
 .table td,
 .table th {
-    min-width: 60px;
-    max-width: 150px;
+  min-width: 60px;
+  max-width: 150px;
 }
 
 
 
 .table th {
-    background-color: rgba(255, 0, 0, 0.7);
-    color: white;
-    font-size: 2.5em;
-    font-weight: 700;
+  background-color: rgba(255, 0, 0, 0.7);
+  color: white;
+  font-size: 2em;
+  font-weight: 700;
 }
 
 .table .hour {
-    background-color: rgba(255, 0, 0, 0.7);
-    color: white;
-    padding: 10px 5px;
-    width: 65px;
+  background-color: rgba(255, 0, 0, 0.7);
+  color: white;
+  padding: 10px 5px;
+  width: 65px;
+  font-size: small;
 }
 
 .activity {
-    background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.87);
+  font-size: 14px;
+  font-weight: 500;
 }
 
 .info {
-    font-size: small;
-    color: yellow;
+  font-size: small;
+  color: yellow;
 }
 
 .today {
-    background-color: rgba(177, 0, 0, 0.87);
+  background-color: rgba(255, 0, 0, 0.4);
 }
 
 /* RESPONSIVE TABLE */
 .table_responsive {
-    margin: 1rem auto;
-    width: 320px;
-}
-
-.today_responsive {
-    background-color: rgba(255, 0, 0, 0.4);
+  margin: 1rem auto;
+  width: 320px;
 }
